# atom

./: .clangd  .gitignore  CMakeLists.txt  demo.js  jsconfig.json  output.json
include/: ast.h  buffer.h  debug.h  dlist.h  error.h  expression.h  json.h  list.h  map.h  parser.h  source.h  statement.h  strings.h  tokenizer.h  tree.h
include/compiler/: astnode.h  compiler.h  tokenizer.h
include/debug/: debug.h
include/engine/: atom.h  value.h
include/parser/: ast.h  astnode.h  expression.h  parser.h  program.h  tokenizer.h
include/util/: bool.h  buffer.h  error.h  json.h  list.h  source.h  strings.h
projects/atom/: CMakeLists.txt
projects/atom/src/: main.cpp
projects/atomc/: CMakeLists.txt
projects/atomc/src/: main.cpp
src/: main.c
src/compiler/: astnode.c  compiler.c  tokenizer.c
src/debug/: debug.c  json.c
src/engine/: ast.c  atom.c  expression.c  json.c  parse.c  parser.c  source.c  statement.c  tokenizer.c  value.c
src/engine/ast/: expression.c  program.c  statement.c
src/engine/expression/: array.c  assignment.c  await.c  bracket.c  calculate.c  call.c  class.c  compute.c  condition.c  delete.c  function.c  identifier.c  lambda.c  literal.c  member.c  new.c  object.c  optional.c  super.c  template.c  this.c
src/engine/statement/: assignment.c  block.c  break.c  continue.c  doWhile.c  empty.c  export.c  expression.c  for.c  if.c  import.c  label.c  program.c  return.c  switch.c  while.c  with.c  yield.c
src/parser/: ast.c  astnode.c  expression.c  json.c  parser.c  program.c  statement.c  tokenizer.c
src/parser/expression/: array.c  assignment.c  await.c  bracket.c  calculate.c  call.c  class.c  compute.c  (+12 more)
src/util/: buffer.c  dlist.c  error.c  json.c  list.c  map.c  source.c  strings.c  tree.c
tools/: filesystem.cmake
(+39 files in other folders)
